@@ -21,7 +21,7 @@ module org.apache.zookeeper.data {
         ustring scheme;
         ustring id;
     }
-    class ACL {
+   class ACL {
         int perms;
         Id id;
     }
